--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=JavaSpringLearn
+spring.application.name=huangDemo
 spring.messages.basename=i18n/messages
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
