--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
-        </dependency>       
+        </dependency>    
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>   
 	</dependencies>
 
 	<build>
