--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 mybatis.mapper-locations=classpath:mapper/*.xml
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
